--- a/pages/cafeteria.html
+++ b/pages/cafeteria.html
@@ -49,13 +49,13 @@
                 <a class="nav-link" href="#">Cafetería</a>
                 </li>
                 <li class="nav-item">
-                <a class="nav-link" href="./pages/panaderia.html">Panadería</a>
+                <a class="nav-link" href="./panaderia.html">Panadería</a>
                 </li>
                 <li class="nav-item">
-                <a class="nav-link" href="./pages/pasteleria.html">Pastelería</a>
+                <a class="nav-link" href="./pasteleria.html">Pastelería</a>
                 </li>
                 <li class="nav-item">
-                <a class="nav-link" href="./pages/brunch.html">Brunch</a>
+                <a class="nav-link" href="./brunch.html">Brunch</a>
                 </li>
 
             </ul>
@@ -78,43 +78,67 @@
 
         <section class="galeriacafeteria">
             <!-- Imagen 1 de la cafetería -->
-            <div class="galeriacafeteria__item galeriacafeteria__item--1">
+            <div class="galeria__item galeriacafeteria__item--1">
                 <img src="../img/cafeteria/matcha-latte.jpg" alt="" class="galeriacafeteria__img">
+                <div class="galeria__overlay">
+                    <span class="galeria__text"> Pedilo como MATCHA LATTE, con leche vacuna o bebida de almendras casera.</span>
+                </div>
             </div>
 
             <!-- Imagen 2 de la cafetería -->
-            <div class="galeriacafeteria__item galeriacafeteria__item--2">
+            <div class="galeria__item galeriacafeteria__item--2">
                 <img src="../img/cafeteria/frapuccinos.jpg" alt="" class="galeriacafeteria__img">
+                <div class="galeria__overlay">
+                    <span class="galeria__text"> Frapuccinos: meriendas bien frescas ~ Pasá a buscarlo, disfrutalo en nuestros cafés.</span>
+                </div>
             </div>
 
             <!-- Imagen 3 de la cafetería -->
-            <div class="galeriacafeteria__item galeriacafeteria__item--3">
+            <div class="galeria__item galeriacafeteria__item--3">
                 <img src="../img/cafeteria/golpen-milk.jpg" alt="" class="galeriacafeteria__img">
+                <div class="galeria__overlay">
+                    <span class="galeria__text"> Golden milk: cúrcuma, bebida de almendras, canela y con un toque de pimienta negra. Super antioxidante.</span>
+                </div>
             </div>
 
             <!-- Imagen 4 de la cafetería -->
-            <div class="galeriacafeteria__item galeriacafeteria__item--4">
+            <div class="galeria__item galeriacafeteria__item--4">
                 <img src="../img/cafeteria/cafe-proteico.jfif" alt="" class="galeriacafeteria__img">
+                <div class="galeria__overlay">
+                    <span class="galeria__text"> Café protéico y refrescante >> Café, cacao amargo, whey protein, leche vacuna o de almendras</span>
+                </div>
             </div>
 
             <!-- Imagen 5 de la cafetería -->
-            <div class="galeriacafeteria__item galeriacafeteria__item--5">
+            <div class="galeria__item galeriacafeteria__item--5">
                 <img src="../img/cafeteria/cafe-al-paso.jpg" alt="" class="galeriacafeteria__img">
+                <div class="galeria__overlay">
+                    <span class="galeria__text"> Café al paso: recargate de energía cada mañana</span>
+                </div>
             </div>
 
             <!-- Imagen 6 de la cafetería -->
-            <div class="galeriacafeteria__item galeriacafeteria__item--6">
+            <div class="galeria__item galeriacafeteria__item--6">
                 <img src="../img/cafeteria/cafe.jpg" alt="" class="galeriacafeteria__img">
+                <div class="galeria__overlay">
+                    <span class="galeria__text"> Café con leche de almendras casera. Activamos almendras y licuamos. Natural y saludable.</span>
+                </div>
             </div>
 
             <!-- Imagen 7 de la cafetería -->
-            <div class="galeriacafeteria__item galeriacafeteria__item--7">
+            <div class="galeria__item galeriacafeteria__item--7">
                 <img src="../img/cafeteria/combinacion-1.jpg" alt="" class="galeriacafeteria__img">
+                <div class="galeria__overlay">
+                    <span class="galeria__text"> Recargá tus mañanas de energía con este bowl súper nutritivo de leche vacuna o bebida de almendras, frutos rojos, banana, whey protein y almendras trozadas.</span>
+                </div>
             </div>
 
             <!-- Imagen 8 de la cafetería -->
-            <div class="galeriacafeteria__item galeriacafeteria__item--8">
+            <div class="galeria__item galeriacafeteria__item--8">
                 <img src="../img/cafeteria/combinacion-2.jpg" alt="" class="galeriacafeteria__img">
+                <div class="galeria__overlay">
+                    <span class="galeria__text"> Empezá la semana con este pancake XL de avena fermentada y cacao amargo, con frutas de estación, frutos secos y miel pura y acompañalo con café con leche vacuna o de almendras casera.</span>
+                </div>
             </div>
 
 
