--- a/index.html
+++ b/index.html
@@ -5,14 +5,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <!-- Tipografía -->
     <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
-
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Arsenal+SC:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">    
+    <!-- Hoja de estilos -->
     <link rel="stylesheet" href="./css/index.css">
-
+    <!-- Bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A==" crossorigin="anonymous" referrerpolicy="no-referrer" /> <!-- Logos para el footer -->
-
+    <!-- Iconos de Bootstrap -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+    <!-- Favicon -->
     <title>Franco Colella</title>
     <link rel="shortcut icon" href="./img/favicon.png" type="image/x-icon">
 </head>
@@ -104,79 +108,57 @@
 
 
 
-    <footer class="bg-light text-dark pt-5 pb-4">
-        <div class="container text-center text-md-start">
-            <div class="row text-center text-md-start">
-                <div class="col-md-3 col-lg-3 col-xl-3 mx-auto mt-3">
-                    <h5 class="text-uppercase mb-4 font-weight-bold text-primary">Nosotros</h5>
-                    <hr class="mb-4"> 
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione aliquid saepe dolor aperiam rem enim? Labore, at! Perferendis ab quam, esse mollitia dolores iure officiis eos quaerat, a asperiores excepturi?                    
-                    </p>
-                </div>
-                <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mt-3">
-                    <h5 class="text-uppercase mb-4 font-weight-bold text-primary">Dejanos ayudarte</h5>
-                    <hr class="mb-4"> 
-                    <p><a href="#" class="text-dark">Tu cuenta</a></p>
-                    <p><a href="#" class="text-dark">Tus ordenes</a></p>
-                    <p><a href="#" class="text-dark">Manejo de cuenta</a></p>
-                    <p><a href="#" class="text-dark">Ayuda</a></p>
-                </div>
-                <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mt-3">
-                    <h5 class="text-uppercase mb-4 font-weight-bold text-primary">Has dinero</h5>
-                    <hr class="mb-4"> 
-                    <p><a href="#" class="text-dark">Vende productos en nuestro sitio</a></p>
-                    <p><a href="#" class="text-dark">Anuncios</a></p>
-                    <p><a href="#" class="text-dark">Afiliate</a></p>
-                    <p><a href="#" class="text-dark">Publica</a></p>
-                </div>
-                <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mt-3">
-                    <h5 class="text-uppercase mb-4 font-weight-bold text-primary">Contacto</h5>
-                    <hr class="mb-4"> 
-                    <p>
-                        <li class="fas fa-home me-3"></li>
-                    </p>
-                    <p>
-                        <li class="fas fa-envelope me-3"></li>
-                    </p>
-                    <p>
-                        <li class="fas fa-phone me-3"></li>
-                    </p>
-                    <p>
-                        <li class="fas fa-print me-3"></li>
-                    </p>
-                    <hr class="mb-4"> 
-                </div>
-                <div class="text-center mb-2">
-                    <p>Todos los derechos reservados</p>
-                    <a href="#">
-                        <Strong class="text-primary">test</Strong>
-                    </a>
-                </div>
-                <div class="text-center">
-                    <ul class="list-unstyled list-inline">
-                        <li class="list-inline-item">
-                            <a href="#" class="text-dark"><i class="fab fa-facebook"></i></a>
-                        </li>
-                        <li class="list-inline-item">
-                            <a href="#" class="text-dark"><i class="fab fa-twitter"></i></a>
-                        </li>
-                        <li class="list-inline-item">
-                            <a href="#" class="text-dark"><i class="fab fa-google"></i></a>
-                        </li>
-                        <li class="list-inline-item">
-                            <a href="#" class="text-dark"><i class="fab fa-youtube"></i></a>
-                        </li>
-                    </ul>
-
-                </div>
-
+<footer>
+    <div class="contenedor-footer">
+        <div class="contenido-footer">
+            <h5>Nosotros</h5>
+            <p>
+                Estamos dentro de los polos gastronómicos mas visitados de nuestra ciudad, contando con dos cafeterías ambientadas y preparadas para que vos y tu familia puedan pasar una tarde increíble.<be>
+                Vení y hacenos afitriones de tu momento especial.
+        
+            </p>
+        </div>
+        <div class="contenido-footer">
+            <h5>Sucursales</h5>
+            <ul>
+                <li>San Jerónimo y Eva Perón</li>
+                <li>1° de Mayo y Juan de Garay</li>
+                <li>Bv. Galvez y Belgrano</li>
+                <li>Suipacha 2425</li>
+                <li>San Martín 1895</li>
+                <li>San Martín 3091 Take Away</li>
+                <li>Av. Richieri 3222. Santo Tomé</li>
+                <li>General Lopez 2626</li>
+                <li>Bv.Galvez 1829</li>
+                <li>San Martín y Suipacha</li>
+                <li>Alberdi y Balcarce</li>
+            </ul>
+        </div>
+        <div class="contenido-footer">
+            <h5>Contacto</h5>
+            <div class="contacto">
+                <p>
+                    <i class="bi bi-house-door"> Las Heras 3199 - Casa central</i>      
+                </p>       
+                <p>
+                    <i class="bi bi-envelope"> info@francocolella.com.ar</i>
+                </p>
+                <p>
+                    <i class="bi bi-telephone"> 4528317/4539811</i>
+                </p>
             </div>
         </div>
-
-    </footer>
-
-
-
+        <div class="redes">
+            <h5>Siguenos en:</h5>
+            <div class="icon-redes">
+                <a href="https://www.instagram.com/franco_colella_panaderias/"><i class="bi bi-instagram"></i></a>
+                <a href="https://www.facebook.com/francocolellaboulevard"><i class="bi bi-facebook"></i></a>
+                <a href="https://api.whatsapp.com/send?phone=5493424792555"><i class="bi bi-whatsapp"></i></a>
+            </div>
+            <p>2024 Todos los derechos reservados.</p>
+        </div>
+    </div>
+</footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
 </html>
