Actualización de páginas

--- a/pages/brunch.html
+++ b/pages/brunch.html
@@ -59,7 +59,7 @@
                 <a class="nav-link" href="./pasteleria.html">Pastelería</a>
                 </li>
                 <li class="nav-item">
-                <a class="nav-link" href="#">Brunch</a>
+                <a class="nav-link active" href="#">Brunch</a>
                 </li>
 
             </ul>
@@ -80,70 +80,65 @@
 
     <main class="hero-section">
 
-        <section class="galeriacafeteria">
-            <!-- Imagen 1 de la cafetería -->
-            <div class="galeria__item galeriacafeteria__item--1">
-                <img src="../img/cafeteria/matcha-latte.jpg" alt="" class="galeriacafeteria__img">
+        <section class="galeriabruch">
+            <!-- Imagen 1 de la bruch -->
+            <div class="galeria__item galeriabruch__item--1">
+                <img src="../img/brunch/sandwich-proteico.jpg" alt="" class="galeriabruch__img">
                 <div class="galeria__overlay">
-                    <span class="galeria__text"> Pedilo como MATCHA LATTE, con leche vacuna o bebida de almendras casera.</span>
+                    <span class="galeria__text"> Sándwich proteico >> Atún, hummus, zanahoria, lechuga y tomate + ensalada.</span>
                 </div>
             </div>
 
-            <!-- Imagen 2 de la cafetería -->
-            <div class="galeria__item galeriacafeteria__item--2">
-                <img src="../img/cafeteria/frapuccinos.jpg" alt="" class="galeriacafeteria__img">
+            <!-- Imagen 2 de la bruch -->
+            <div class="galeria__item galeriabruch__item--2">
+                <img src="../img/brunch/bagel.jpg" alt="" class="galeriabruch__img">
                 <div class="galeria__overlay">
-                    <span class="galeria__text"> Frapuccinos: meriendas bien frescas ~ Pasá a buscarlo, disfrutalo en nuestros cafés.</span>
+                    <span class="galeria__text"> Pasá por casa central y llevate tu bagel de masa madre y harinas orgánicas: hummus, tomates, palta, zanahoria, cebollas caramelizadas</span>
                 </div>
             </div>
 
-            <!-- Imagen 3 de la cafetería -->
-            <div class="galeria__item galeriacafeteria__item--3">
-                <img src="../img/cafeteria/golpen-milk.jpg" alt="" class="galeriacafeteria__img">
+            <!-- Imagen 3 de la bruch -->
+            <div class="galeria__item galeriabruch__item--3">
+                <img src="../img/brunch/ensalada.jpg" alt="" class="galeriabruch__img">
                 <div class="galeria__overlay">
-                    <span class="galeria__text"> Golden milk: cúrcuma, bebida de almendras, canela y con un toque de pimienta negra. Super antioxidante.</span>
+                    <span class="galeria__text"> Ensalada de bajo índice glucémico >> quinoa, pollo al pimentón, cherries, hojas verdes y palta.</span>
                 </div>
             </div>
 
-            <!-- Imagen 4 de la cafetería -->
-            <div class="galeria__item galeriacafeteria__item--4">
-                <img src="../img/cafeteria/cafe-proteico.jfif" alt="" class="galeriacafeteria__img">
+            <!-- Imagen 4 de la bruch -->
+            <div class="galeria__item galeriabruch__item--4">
+                <img src="../img/brunch/pastel-de-calabaza.jpg" alt="" class="galeriabruch__img">
                 <div class="galeria__overlay">
-                    <span class="galeria__text"> Café protéico y refrescante >> Café, cacao amargo, whey protein, leche vacuna o de almendras</span>
+                    <span class="galeria__text"> Pastel de calabaza, lentejas y pollo + ensalada ~ Disfrutalo en nuestros cafés.</span>
                 </div>
             </div>
 
-            <!-- Imagen 5 de la cafetería -->
-            <div class="galeria__item galeriacafeteria__item--5">
-                <img src="../img/cafeteria/cafe-al-paso.jpg" alt="" class="galeriacafeteria__img">
+            <!-- Imagen 5 de la bruch -->
+            <div class="galeria__item galeriabruch__item--5">
+                <img src="../img/brunch/bowl.jpg" alt="" class="galeriabruch__img">
                 <div class="galeria__overlay">
-                    <span class="galeria__text"> Café al paso: recargate de energía cada mañana</span>
+                    <span class="galeria__text">Este bowl no puede ser más rico y sano: hojas verdes, vegetales salteados, nueces, tofu salteado en cúrcuma, brócoli, quinoa, huevo poche y langostinos salteados.</span>
                 </div>
             </div>
 
-            <!-- Imagen 6 de la cafetería -->
-            <div class="galeria__item galeriacafeteria__item--6">
-                <img src="../img/cafeteria/cafe.jpg" alt="" class="galeriacafeteria__img">
+            <!-- Imagen 6 de la bruch -->
+            <div class="galeria__item galeriabruch__item--6">
+                <img src="../img/brunch/tarta.jpg" alt="" class="galeriabruch__img">
                 <div class="galeria__overlay">
-                    <span class="galeria__text"> Café con leche de almendras casera. Activamos almendras y licuamos. Natural y saludable.</span>
+                    <span class="galeria__text"> Nueva tarta plant-based de calabaza y porotos en masa integral. Disfrutala en nuestros cafés.
+                        .</span>
                 </div>
             </div>
 
-            <!-- Imagen 7 de la cafetería -->
-            <div class="galeria__item galeriacafeteria__item--7">
-                <img src="../img/cafeteria/combinacion-1.jpg" alt="" class="galeriacafeteria__img">
+            <!-- Imagen 7 de la bruch -->
+            <div class="galeria__item galeriabruch__item--7">
+                <img src="../img/brunch/pollo-al-curry.jpg" alt="" class="galeriabruch__img">
                 <div class="galeria__overlay">
-                    <span class="galeria__text"> Recargá tus mañanas de energía con este bowl súper nutritivo de leche vacuna o bebida de almendras, frutos rojos, banana, whey protein y almendras trozadas.</span>
+                    <span class="galeria__text"> Pollo al curry acompañado de ensalada de hojas verdes, cherries & semillas de zapallo.</span>
                 </div>
             </div>
 
-            <!-- Imagen 8 de la cafetería -->
-            <div class="galeria__item galeriacafeteria__item--8">
-                <img src="../img/cafeteria/combinacion-2.jpg" alt="" class="galeriacafeteria__img">
-                <div class="galeria__overlay">
-                    <span class="galeria__text"> Empezá la semana con este pancake XL de avena fermentada y cacao amargo, con frutas de estación, frutos secos y miel pura y acompañalo con café con leche vacuna o de almendras casera.</span>
-                </div>
-            </div>
+ 
 
 
 
