--- a/pages/cafeteria.html
+++ b/pages/cafeteria.html
@@ -50,7 +50,7 @@
                 <a class="nav-link" href="../index.html">Home</a>
                 </li>
                 <li class="nav-item">
-                <a class="nav-link" href="#">Cafetería</a>
+                <a class="nav-link active" href="#">Cafetería</a>
                 </li>
                 <li class="nav-item">
                 <a class="nav-link" href="./panaderia.html">Panadería</a>
