--- a/pages/pasteleria.html
+++ b/pages/pasteleria.html
@@ -56,7 +56,7 @@
                 <a class="nav-link" href="./panaderia.html">Panadería</a>
                 </li>
                 <li class="nav-item">
-                <a class="nav-link" href="#">Pastelería</a>
+                <a class="nav-link active" href="#">Pastelería</a>
                 </li>
                 <li class="nav-item">
                 <a class="nav-link" href="./brunch.html">Brunch</a>
@@ -81,69 +81,62 @@
     <main class="hero-section">
 
         <section class="galeriacafeteria">
-            <!-- Imagen 1 de la cafetería -->
-            <div class="galeria__item galeriacafeteria__item--1">
-                <img src="../img/cafeteria/matcha-latte.jpg" alt="" class="galeriacafeteria__img">
+            <!-- Imagen 1 de la pasteleria -->
+            <div class="galeria__item galeriapasteleria__item--1">
+                <img src="../img/pastelería/kinder.jpg" alt="" class="galeriapasteleria__img">
                 <div class="galeria__overlay">
-                    <span class="galeria__text"> Pedilo como MATCHA LATTE, con leche vacuna o bebida de almendras casera.</span>
+                    <span class="galeria__text"> Kinder: masa sablée de chocolate, cremosa blanca, kinder bueno y ganache de chocolate negro.</span>
                 </div>
             </div>
 
-            <!-- Imagen 2 de la cafetería -->
-            <div class="galeria__item galeriacafeteria__item--2">
-                <img src="../img/cafeteria/frapuccinos.jpg" alt="" class="galeriacafeteria__img">
+            <!-- Imagen 2 de la pasteleria -->
+            <div class="galeria__item galeriapasteleria__item--2">
+                <img src="../img/pastelería/brownie.jpg" alt="" class="galeriapasteleria__img">
                 <div class="galeria__overlay">
-                    <span class="galeria__text"> Frapuccinos: meriendas bien frescas ~ Pasá a buscarlo, disfrutalo en nuestros cafés.</span>
+                    <span class="galeria__text"> Brownie blanco con frutos rojos, crema toffee, reducción de frutos rojos y crocante de frutos secos.</span>
                 </div>
             </div>
 
-            <!-- Imagen 3 de la cafetería -->
-            <div class="galeria__item galeriacafeteria__item--3">
-                <img src="../img/cafeteria/golpen-milk.jpg" alt="" class="galeriacafeteria__img">
+            <!-- Imagen 3 de la pasteleria -->
+            <div class="galeria__item galeriapasteleria__item--3">
+                <img src="../img/pastelería/nutella-cake.jpg" alt="" class="galeriapasteleria__img">
                 <div class="galeria__overlay">
-                    <span class="galeria__text"> Golden milk: cúrcuma, bebida de almendras, canela y con un toque de pimienta negra. Super antioxidante.</span>
+                    <span class="galeria__text">Best Nutella Cake in Town.</span>
                 </div>
             </div>
 
-            <!-- Imagen 4 de la cafetería -->
-            <div class="galeria__item galeriacafeteria__item--4">
-                <img src="../img/cafeteria/cafe-proteico.jfif" alt="" class="galeriacafeteria__img">
+            <!-- Imagen 4 de la pasteleria -->
+            <div class="galeria__item galeriapasteleria__item--4">
+                <img src="../img/pastelería/marquise.jpg" alt="" class="galeriapasteleria__img">
                 <div class="galeria__overlay">
-                    <span class="galeria__text"> Café protéico y refrescante >> Café, cacao amargo, whey protein, leche vacuna o de almendras</span>
+                    <span class="galeria__text"> Marquise de maracuyá y frutos rojos.</span>
                 </div>
             </div>
 
-            <!-- Imagen 5 de la cafetería -->
-            <div class="galeria__item galeriacafeteria__item--5">
-                <img src="../img/cafeteria/cafe-al-paso.jpg" alt="" class="galeriacafeteria__img">
+            <!-- Imagen 5 de la pasteleria -->
+            <div class="galeria__item galeriapasteleria__item--5">
+                <img src="../img/pastelería/macarons.jpg" alt="" class="galeriapasteleria__img">
                 <div class="galeria__overlay">
-                    <span class="galeria__text"> Café al paso: recargate de energía cada mañana</span>
+                    <span class="galeria__text">Macarons de todos los colores.</span>
                 </div>
             </div>
 
-            <!-- Imagen 6 de la cafetería -->
-            <div class="galeria__item galeriacafeteria__item--6">
-                <img src="../img/cafeteria/cafe.jpg" alt="" class="galeriacafeteria__img">
+            <!-- Imagen 6 de la pasteleria -->
+            <div class="galeria__item galeriapasteleria__item--6">
+                <img src="../img/pastelería/mini-bombon.jpg" alt="" class="galeriapasteleria__img">
                 <div class="galeria__overlay">
-                    <span class="galeria__text"> Café con leche de almendras casera. Activamos almendras y licuamos. Natural y saludable.</span>
+                    <span class="galeria__text">Mini bombón ~ sin harinas y azúcar refinadas, con crema de castañas de cajú ~ Rica y saludable.</span>
                 </div>
             </div>
 
-            <!-- Imagen 7 de la cafetería -->
-            <div class="galeria__item galeriacafeteria__item--7">
-                <img src="../img/cafeteria/combinacion-1.jpg" alt="" class="galeriacafeteria__img">
+            <!-- Imagen 7 de la pasteleria -->
+            <div class="galeria__item galeriapasteleria__item--7">
+                <img src="../img/pastelería/petite.jpg" alt="" class="galeriapasteleria__img">
                 <div class="galeria__overlay">
-                    <span class="galeria__text"> Recargá tus mañanas de energía con este bowl súper nutritivo de leche vacuna o bebida de almendras, frutos rojos, banana, whey protein y almendras trozadas.</span>
+                    <span class="galeria__text">Petite patisserie.</span>
                 </div>
             </div>
 
-            <!-- Imagen 8 de la cafetería -->
-            <div class="galeria__item galeriacafeteria__item--8">
-                <img src="../img/cafeteria/combinacion-2.jpg" alt="" class="galeriacafeteria__img">
-                <div class="galeria__overlay">
-                    <span class="galeria__text"> Empezá la semana con este pancake XL de avena fermentada y cacao amargo, con frutas de estación, frutos secos y miel pura y acompañalo con café con leche vacuna o de almendras casera.</span>
-                </div>
-            </div>
 
 
 
