--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
             <ul class="navbar-nav ms-auto fs-5">
 
                 <li class="nav-item">
-                <a class="nav-link" href="#">Home</a>
+                <a class="nav-link active" href="#">Home</a>
                 </li>
                 <li class="nav-item">
                 <a class="nav-link" href="./pages/cafeteria.html">Cafetería</a>
