--- a/pages/panaderia.html
+++ b/pages/panaderia.html
@@ -53,7 +53,7 @@
                 <a class="nav-link" href="./cafeteria.html">Cafetería</a>
                 </li>
                 <li class="nav-item">
-                <a class="nav-link" href="#">Panadería</a>
+                <a class="nav-link active" href="#">Panadería</a>
                 </li>
                 <li class="nav-item">
                 <a class="nav-link" href="./pasteleria.html">Pastelería</a>
