--- a/index.html
+++ b/index.html
@@ -60,11 +60,11 @@
                 <li class="nav-item">
                 <a class="nav-link animate__animated animate__slideInDown" href="./pages/panaderia.html">Panadería</a>
                 </li>
-                <li class="nav-item animate__animated animate__slideInUp">
-                <a class="nav-link" href="./pages/pasteleria.html">Pastelería</a>
+                <li class="nav-item">
+                <a class="nav-link animate__animated animate__slideInUp" href="./pages/pasteleria.html">Pastelería</a>
                 </li>
-                <li class="nav-item animate__animated animate__slideInDown">
-                <a class="nav-link" href="./pages/brunch.html">Brunch</a>
+                <li class="nav-item">
+                <a class="nav-link  animate__animated animate__slideInDown" href="./pages/brunch.html">Brunch</a>
                 </li>
             </ul>
             </div>
@@ -105,9 +105,6 @@
         </section>
         <!-- Contenedor inferior -->
         <div class="container-inferior"></div>
-
-        
-
     </main>
 
 <!--==================================================================================================================
