--- a/pages/cafeteria.html
+++ b/pages/cafeteria.html
@@ -14,7 +14,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Paytone+One&display=swap" rel="stylesheet">
     <!-- Hoja de estilos -->
-    <link rel="stylesheet" href="../css/index.css">
+    <link rel="stylesheet" href="../css/custom.css">
     <!-- Bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <!-- Iconos de Bootstrap -->
@@ -74,9 +74,8 @@
 
     <div class="recuadro-inferior"></div>
 </header>
-
-
 <body>
+    
 <!--==================================================================================================================
 =                                           GALERÍA DE LA CAFETERIA                                                  =
 ===================================================================================================================-->
