--- a/pages/pasteleria.html
+++ b/pages/pasteleria.html
@@ -14,7 +14,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Paytone+One&display=swap" rel="stylesheet">
     <!-- Hoja de estilos -->
-    <link rel="stylesheet" href="../css/index.css">
+    <link rel="stylesheet" href="../css/custom.css">
     <!-- Bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <!-- Iconos de Bootstrap -->
@@ -32,6 +32,7 @@
 <!--==================================================================================================================
 =                                                   BARRA DE NAVEGACIÓN                                              =
 ===================================================================================================================-->
+
 <header>
     <div class="recuadro-superior"></div>
 
@@ -74,9 +75,8 @@
 
     <div class="recuadro-inferior"></div>
 </header>
-
-
 <body>
+
 <!--==================================================================================================================
 =                                           GALERÍA DE LA PASTELERIA
 ===================================================================================================================-->
@@ -87,7 +87,7 @@
         <h1>Pastelería - Patisserie</h1>
     </div>
 
-        <section class="galeriacafeteria">
+        <section class="galeriapasteleria">
             <!-- Imagen 1 de la pasteleria -->
             <div class="galeria__item galeriapasteleria__item--1 animate__animated animate__bounceInDown">
                 <img src="../img/pastelería/kinder.jpg" alt="" class="galeriapasteleria__img">
@@ -147,7 +147,8 @@
         <!-- Contenedor inferior -->
         <div class="container-inferior"></div>
     </main>
-   <!--==================================================================================================================
+
+<!--==================================================================================================================
 =                                                   FOOTER                                                           =
 ===================================================================================================================-->
 
