--- a/pages/cafeteria.html
+++ b/pages/cafeteria.html
@@ -89,7 +89,7 @@
         <section class="galeriacafeteria">
             <!-- Imagen 1 de la cafetería -->
             <div class="galeria__item galeriacafeteria__item--1 animate__animated animate__flipInX">
-                <img src="../img/cafeteria/matcha-latte.jpg" alt="" class="galeriacafeteria__img">
+                <img src="../img/cafeteria/matcha-latte.jpg" alt="Matcha latte" class="galeriacafeteria__img">
                 <div class="galeria__overlay">
                     <span class="galeria__text"> Pedilo como MATCHA LATTE, con leche vacuna o bebida de almendras casera.</span>
                 </div>
@@ -97,7 +97,7 @@
             
             <!-- Imagen 2 de la cafetería -->
             <div class="galeria__item galeriacafeteria__item--2 animate__animated animate__flipInY">
-                <img src="../img/cafeteria/frapuccinos.jpg" alt="" class="galeriacafeteria__img">
+                <img src="../img/cafeteria/frapuccinos.jpg" alt="Frapuccinos" class="galeriacafeteria__img">
                 <div class="galeria__overlay">
                     <span class="galeria__text"> Frapuccinos: meriendas bien frescas ~ Pasá a buscarlo, disfrutalo en nuestros cafés.</span>
                 </div>
@@ -105,7 +105,7 @@
 
             <!-- Imagen 3 de la cafetería -->
             <div class="galeria__item galeriacafeteria__item--3 animate__animated animate__flipInX">
-                <img src="../img/cafeteria/golpen-milk.jpg" alt="" class="galeriacafeteria__img">
+                <img src="../img/cafeteria/golpen-milk.jpg" alt="Golden milk" class="galeriacafeteria__img">
                 <div class="galeria__overlay">
                     <span class="galeria__text"> Golden milk: cúrcuma, bebida de almendras, canela y con un toque de pimienta negra. Super antioxidante.</span>
                 </div>
@@ -113,7 +113,7 @@
 
             <!-- Imagen 4 de la cafetería -->
             <div class="galeria__item galeriacafeteria__item--4 animate__animated animate__flipInY">
-                <img src="../img/cafeteria/cafe-proteico.jfif" alt="" class="galeriacafeteria__img">
+                <img src="../img/cafeteria/cafe-proteico.jfif" alt="Café protéico" class="galeriacafeteria__img">
                 <div class="galeria__overlay">
                     <span class="galeria__text"> Café protéico y refrescante >> Café, cacao amargo, whey protein, leche vacuna o de almendras</span>
                 </div>
@@ -121,7 +121,7 @@
 
             <!-- Imagen 5 de la cafetería -->
             <div class="galeria__item galeriacafeteria__item--5 animate__animated animate__flipInY">
-                <img src="../img/cafeteria/cafe-al-paso.jpg" alt="" class="galeriacafeteria__img">
+                <img src="../img/cafeteria/cafe-al-paso.jpg" alt="Café al paso" class="galeriacafeteria__img">
                 <div class="galeria__overlay">
                     <span class="galeria__text"> Café al paso: recargate de energía cada mañana</span>
                 </div>
@@ -129,7 +129,7 @@
 
             <!-- Imagen 6 de la cafetería -->
             <div class="galeria__item galeriacafeteria__item--6 animate__animated animate__flipInY">
-                <img src="../img/cafeteria/cafe.jpg" alt="" class="galeriacafeteria__img">
+                <img src="../img/cafeteria/cafe.jpg" alt="Café con leche de almendras" class="galeriacafeteria__img">
                 <div class="galeria__overlay">
                     <span class="galeria__text"> Café con leche de almendras casera. Activamos almendras y licuamos. Natural y saludable.</span>
                 </div>
@@ -137,7 +137,7 @@
 
             <!-- Imagen 7 de la cafetería -->
             <div class="galeria__item galeriacafeteria__item--7 animate__animated animate__flipInY">
-                <img src="../img/cafeteria/combinacion-1.jpg" alt="" class="galeriacafeteria__img">
+                <img src="../img/cafeteria/combinacion-1.jpg" alt="Bowl de frutas" class="galeriacafeteria__img">
                 <div class="galeria__overlay">
                     <span class="galeria__text"> Recargá tus mañanas de energía con este bowl súper nutritivo de leche vacuna o bebida de almendras, frutos rojos, banana, whey protein y almendras trozadas.</span>
                 </div>
@@ -145,7 +145,7 @@
 
             <!-- Imagen 8 de la cafetería -->
             <div class="galeria__item galeriacafeteria__item--8 animate__animated animate__flipInY">
-                <img src="../img/cafeteria/combinacion-2.jpg" alt="" class="galeriacafeteria__img">
+                <img src="../img/cafeteria/combinacion-2.jpg" alt="Pancake" class="galeriacafeteria__img">
                 <div class="galeria__overlay">
                     <span class="galeria__text"> Empezá la semana con este pancake XL de avena fermentada y cacao amargo, con frutas de estación, frutos secos y miel pura y acompañalo con café con leche vacuna o de almendras casera.</span>
                 </div>
