--- a/pages/panaderia.html
+++ b/pages/panaderia.html
@@ -87,7 +87,7 @@
     <section class="galeriapanaderia">
         <!-- Imagen 1 de la panadería -->
         <div class="galeria__item galeriapanaderia__item--1 animate__animated animate__swing">
-            <img src="../img/panaderia/pan-celiaco.jpg" alt="" class="galeriapanaderia__img">
+            <img src="../img/panaderia/pan-celiaco.jpg" alt="Pan de sarraceno" class="galeriapanaderia__img">
             <div class="galeria__overlay">
                 <span class="galeria__text">Opciones SIN TACC apto celíacos. Pan de sarraceno y legumbres integral.</span>
             </div>
@@ -95,7 +95,7 @@
 
         <!-- Imagen 2 de la panadería -->
         <div class="galeria__item galeriapanaderia__item--2 animate__animated animate__tada">
-            <img src="../img/panaderia/masa-madre.jpg" alt="" class="galeriapanaderia__img">
+            <img src="../img/panaderia/masa-madre.jpg" alt="Facturas de masa madre" class="galeriapanaderia__img">
             <div class="galeria__overlay">
                 <span class="galeria__text">Nueva panificación con harinas orgánicas y masa madre.</span>
             </div>
@@ -103,7 +103,7 @@
 
         <!-- Imagen 3 de la panadería -->
         <div class="galeria__item galeriapanaderia__item--3 animate__animated animate__tada">
-            <img src="../img/panaderia/pan-masa-madre.jpg" alt="" class="galeriapanaderia__img">
+            <img src="../img/panaderia/pan-masa-madre.jpg" alt="Panes de masa madre" class="galeriapanaderia__img">
             <div class="galeria__overlay">
                 <span class="galeria__text">Encontrá nuestros panes de masa madre en casa centra.</span>
             </div>
@@ -111,7 +111,7 @@
 
         <!-- Imagen 4 de la panadería -->
         <div class="galeria__item galeriapanaderia__item--4 animate__animated animate__swing">
-            <img src="../img/panaderia/roll-relleno.jpg" alt="" class="galeriapanaderia__img">
+            <img src="../img/panaderia/roll-relleno.jpg" alt="Roll de canela relleno" class="galeriapanaderia__img">
             <div class="galeria__overlay">
                 <span class="galeria__text">Roll de canela relleno.</span>
             </div>
@@ -119,7 +119,7 @@
 
         <!-- Imagen 5 de la panadería -->
         <div class="galeria__item galeriapanaderia__item--5 animate__animated animate__swing">
-            <img src="../img/panaderia/croissants.jpg" alt="" class="galeriapanaderia__img">
+            <img src="../img/panaderia/croissants.jpg" alt="Croissants de masa madre" class="galeriapanaderia__img">
             <div class="galeria__overlay">
                 <span class="galeria__text">Croissants de masa madre & harinas agroecológicas.</span>
             </div>
@@ -127,7 +127,7 @@
 
         <!-- Imagen 6 de la panadería -->
         <div class="galeria__item galeriapanaderia__item--6 animate__animated animate__tada">
-            <img src="../img/panaderia/vigilantes.jpg" alt="" class="galeriapanaderia__img">
+            <img src="../img/panaderia/vigilantes.jpg" alt="Vigilantes" class="galeriapanaderia__img">
             <div class="galeria__overlay">
                 <span class="galeria__text">Los clásicos vigilantes, con membrillo o con dulce de leche.</span>
             </div>
@@ -135,7 +135,7 @@
 
         <!-- Imagen 7 de la panadería -->
         <div class="galeria__item galeriapanaderia__item--7 animate__animated animate__tada">
-            <img src="../img/panaderia/pirulinco-1.jpg" alt="" class="galeriapanaderia__img">
+            <img src="../img/panaderia/pirulinco-1.jpg" alt="Pirulinco" class="galeriapanaderia__img">
             <div class="galeria__overlay">
                 <span class="galeria__text">I ♡ pirulinco</span>
             </div>
@@ -143,7 +143,7 @@
 
         <!-- Imagen 8 de la panadería -->
         <div class="galeria__item galeriapanaderia__item--8 animate__animated animate__swing">
-            <img src="../img/panaderia/pirulinco.jpg" alt="" class="galeriapanaderia__img">
+            <img src="../img/panaderia/pirulinco.jpg" alt="Pirulinco" class="galeriapanaderia__img">
             <div class="galeria__overlay">
                 <span class="galeria__text">Siempre es un buen momento para un buen PIRULINCO.</span>
             </div>
