--- a/pages/pasteleria.html
+++ b/pages/pasteleria.html
@@ -90,7 +90,7 @@
         <section class="galeriapasteleria">
             <!-- Imagen 1 de la pasteleria -->
             <div class="galeria__item galeriapasteleria__item--1 animate__animated animate__bounceInDown">
-                <img src="../img/pastelería/kinder.jpg" alt="" class="galeriapasteleria__img">
+                <img src="../img/pastelería/kinder.jpg" alt="Kinder" class="galeriapasteleria__img">
                 <div class="galeria__overlay">
                     <span class="galeria__text"> Kinder: masa sablée de chocolate, cremosa blanca, kinder bueno y ganache de chocolate negro.</span>
                 </div>
@@ -98,7 +98,7 @@
 
             <!-- Imagen 2 de la pasteleria -->
             <div class="galeria__item galeriapasteleria__item--2 animate__animated animate__bounceInDown">
-                <img src="../img/pastelería/brownie.jpg" alt="" class="galeriapasteleria__img">
+                <img src="../img/pastelería/brownie.jpg" alt="Brownie blanco con frutos rojos" class="galeriapasteleria__img">
                 <div class="galeria__overlay">
                     <span class="galeria__text"> Brownie blanco con frutos rojos, crema toffee, reducción de frutos rojos y crocante de frutos secos.</span>
                 </div>
@@ -106,7 +106,7 @@
 
             <!-- Imagen 3 de la pasteleria -->
             <div class="galeria__item galeriapasteleria__item--3 animate__animated animate__bounceInDown">
-                <img src="../img/pastelería/nutella-cake.jpg" alt="" class="galeriapasteleria__img">
+                <img src="../img/pastelería/nutella-cake.jpg" alt="Best Nutella Cake in Town" class="galeriapasteleria__img">
                 <div class="galeria__overlay">
                     <span class="galeria__text">Best Nutella Cake in Town.</span>
                 </div>
@@ -114,7 +114,7 @@
 
             <!-- Imagen 4 de la pasteleria -->
             <div class="galeria__item galeriapasteleria__item--4 animate__animated animate__bounceInDown">
-                <img src="../img/pastelería/marquise.jpg" alt="" class="galeriapasteleria__img">
+                <img src="../img/pastelería/marquise.jpg" alt="Marquise" class="galeriapasteleria__img">
                 <div class="galeria__overlay">
                     <span class="galeria__text"> Marquise de maracuyá y frutos rojos.</span>
                 </div>
@@ -122,7 +122,7 @@
 
             <!-- Imagen 5 de la pasteleria -->
             <div class="galeria__item galeriapasteleria__item--5 animate__animated animate__bounceInDown">
-                <img src="../img/pastelería/macarons.jpg" alt="" class="galeriapasteleria__img">
+                <img src="../img/pastelería/macarons.jpg" alt="Macarons" class="galeriapasteleria__img">
                 <div class="galeria__overlay">
                     <span class="galeria__text">Macarons de todos los colores.</span>
                 </div>
@@ -130,7 +130,7 @@
 
             <!-- Imagen 6 de la pasteleria -->
             <div class="galeria__item galeriapasteleria__item--6 animate__animated animate__bounceInDown">
-                <img src="../img/pastelería/mini-bombon.jpg" alt="" class="galeriapasteleria__img">
+                <img src="../img/pastelería/mini-bombon.jpg" alt="Mini bombón" class="galeriapasteleria__img">
                 <div class="galeria__overlay">
                     <span class="galeria__text">Mini bombón ~ sin harinas y azúcar refinadas, con crema de castañas de cajú ~ Rica y saludable.</span>
                 </div>
@@ -138,7 +138,7 @@
 
             <!-- Imagen 7 de la pasteleria -->
             <div class="galeria__item galeriapasteleria__item--7 animate__animated animate__bounceInDown">
-                <img src="../img/pastelería/petite.jpg" alt="" class="galeriapasteleria__img">
+                <img src="../img/pastelería/petite.jpg" alt="Minipastelería" class="galeriapasteleria__img">
                 <div class="galeria__overlay">
                     <span class="galeria__text">Petite patisserie.</span>
                 </div>
