--- a/pages/brunch.html
+++ b/pages/brunch.html
@@ -88,7 +88,7 @@
         <section class="galeriabruch">
             <!-- Imagen 1 de la bruch -->
             <div class="galeria__item galeriabruch__item--1 animate__animated animate__jackInTheBox">
-                <img src="../img/brunch/sandwich-proteico.jpg" alt="" class="galeriabruch__img">
+                <img src="../img/brunch/sandwich-proteico.jpg" alt="Sándwich proteico" class="galeriabruch__img">
                 <div class="galeria__overlay">
                     <span class="galeria__text"> Sándwich proteico >> Atún, hummus, zanahoria, lechuga y tomate + ensalada.</span>
                 </div>
@@ -96,7 +96,7 @@
 
             <!-- Imagen 2 de la bruch -->
             <div class="galeria__item galeriabruch__item--2 animate__animated animate__jackInTheBox">
-                <img src="../img/brunch/bagel.jpg" alt="" class="galeriabruch__img">
+                <img src="../img/brunch/bagel.jpg" alt="bagel de masa madre" class="galeriabruch__img">
                 <div class="galeria__overlay">
                     <span class="galeria__text"> Pasá por casa central y llevate tu bagel de masa madre y harinas orgánicas: hummus, tomates, palta, zanahoria, cebollas caramelizadas</span>
                 </div>
@@ -104,7 +104,7 @@
 
             <!-- Imagen 3 de la bruch -->
             <div class="galeria__item galeriabruch__item--3 animate__animated animate__jackInTheBox">
-                <img src="../img/brunch/ensalada.jpg" alt="" class="galeriabruch__img">
+                <img src="../img/brunch/ensalada.jpg" alt="Ensalada" class="galeriabruch__img">
                 <div class="galeria__overlay">
                     <span class="galeria__text"> Ensalada de bajo índice glucémico >> quinoa, pollo al pimentón, cherries, hojas verdes y palta.</span>
                 </div>
@@ -112,7 +112,7 @@
 
             <!-- Imagen 4 de la bruch -->
             <div class="galeria__item galeriabruch__item--4 animate__animated animate__zoomIn">
-                <img src="../img/brunch/pastel-de-calabaza.jpg" alt="" class="galeriabruch__img">
+                <img src="../img/brunch/pastel-de-calabaza.jpg" alt="Pastel de calabaza" class="galeriabruch__img">
                 <div class="galeria__overlay">
                     <span class="galeria__text"> Pastel de calabaza, lentejas y pollo + ensalada ~ Disfrutalo en nuestros cafés.</span>
                 </div>
@@ -120,7 +120,7 @@
 
             <!-- Imagen 5 de la bruch -->
             <div class="galeria__item galeriabruch__item--5 animate__animated animate__jackInTheBox">
-                <img src="../img/brunch/bowl.jpg" alt="" class="galeriabruch__img">
+                <img src="../img/brunch/bowl.jpg" alt="Bowl de vegetales" class="galeriabruch__img">
                 <div class="galeria__overlay">
                     <span class="galeria__text">Este bowl no puede ser más rico y sano: hojas verdes, vegetales salteados, nueces, tofu salteado en cúrcuma, brócoli, quinoa, huevo poche y langostinos salteados.</span>
                 </div>
@@ -128,7 +128,7 @@
 
             <!-- Imagen 6 de la bruch -->
             <div class="galeria__item galeriabruch__item--6 animate__animated animate__jackInTheBox">
-                <img src="../img/brunch/tarta.jpg" alt="" class="galeriabruch__img">
+                <img src="../img/brunch/tarta.jpg" alt="Tarta de calabaza" class="galeriabruch__img">
                 <div class="galeria__overlay">
                     <span class="galeria__text"> Nueva tarta plant-based de calabaza y porotos en masa integral. Disfrutala en nuestros cafés.
                         .</span>
@@ -137,7 +137,7 @@
 
             <!-- Imagen 7 de la bruch -->
             <div class="galeria__item galeriabruch__item--7 animate__animated animate__jackInTheBox">
-                <img src="../img/brunch/pollo-al-curry.jpg" alt="" class="galeriabruch__img">
+                <img src="../img/brunch/pollo-al-curry.jpg" alt="Pollo al curry y ensalada" class="galeriabruch__img">
                 <div class="galeria__overlay">
                     <span class="galeria__text"> Pollo al curry acompañado de ensalada de hojas verdes, cherries & semillas de zapallo.</span>
                 </div>
